--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -103,4 +103,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: build-windows-target
-          path: D:\a\Brotli4j\
+          path: D:\a\ntn-openssl\
